--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--Made using the 2-bit demichrome palette by Space Sandwich on Lospec.com-->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Matteo golin's digital business card."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/static/favicon.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/index.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,20 +28,31 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Matteo Golin</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!--Positions the headshot based on the height and width of the card-->
+    <script>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      function positionPFP() {
+        // Elements
+        const pfp = document.getElementsByClassName("headshot")[0];
+        const card = document.getElementsByClassName("card")[0];
+
+        // X and Y coordinates based off of the width and heigh of the card
+        const x_coord = card.clientWidth * 0.48;
+        const y_coord = card.clientHeight * 0.025;
+
+        pfp.style.left = x_coord.toString() +"px";
+        pfp.style.bottom = y_coord.toString() +"px";
+      };
+
+      $( window ).resize(positionPFP);  // On resize
+
+      document.addEventListener("DOMContentLoaded", positionPFP); // Initial load
+
+    </script>
   </body>
 </html>
